# qwen3-score

./: .gitattributes  .gitignore  README.md  analyze_results.py  batch_compare.py  check_logs.py  compare.py  eacps.py  manual_commands.sh  project-label.json  project_status.md  push_latest_labelstudio.py  pyproject.toml  quick_start.sh  ref.py  requirements.txt  run_batch_tmux.sh  run_qwen_edit_eval.py  setup_labelstudio.py  visualize_results.py  writeup.md
character-annon/: README.md  run_inpaint.py
data/: drawbench.jsonl  edits_v1.jsonl  eval_prompts.jsonl  indian1_prompts.jsonl  indian2_prompts.jsonl  male_viewpoints.jsonl  rabbit_edits.jsonl
docs/: eacps_blog.html  eacps_blog.md  eacps_blog_export.md  eacps_inference_scaling.md  eacps_inference_scaling_standalone.md  writeup.html
inpaint_eacps/: FIX_GIT_AND_INSTALL.md  IMPROVEMENTS.md  INSTALL_AND_RUN.md  PROMPT_STRATEGY.md  QUICK_START.md  README.md  README_ZELLIJ.md  RESTART_FIXED.md  RUN_7_TASKS.md  RUN_DIRECT.md  ZELLIJ_USAGE.md  __init__.py  cli.py  config.py  install_zellij.sh  pipeline.py  run.py  run_batch_dual.py  run_dual.py  run_multigpu_batch.py  run_single_with_prompt.py  scorers.py  start_tmux.sh  start_zellij.sh
labelstudio_export/: labeling_config.xml
labelstudio_inpaint/: __init__.py  compositor.py
mask/: compositor.py  config.py  faceswap.py  labelstudio.py  pipeline.py  run.py  run_faceswap.py  start_tmux.sh  worker.py
results_indian2_flags/: batch_results.json
src/: __init__.py  batch_compare.py  benchmark.py  character_inpaint.py  delete_tasks.py  labelstudio_inpaint.py  scorers.py  (+4 more)
(+220 files in other folders)
