[project]
name = "qwen3-score"
version = "0.1.0"
description = "Inference-time scaling for image editing: EACPS vs TTFLUX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "diffusers>=0.32.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "Pillow>=10.0.0",
    "lpips>=0.1.4",
    "image-reward>=1.5",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "sentencepiece>=0.2.0",
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
faceswap = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16.0",
    "mediapipe>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "labelstudio_inpaint"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
